// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteAccountPopup renders forRealsies correctly 1`] = `
<PeachText>
  For realsies. 
No backup or no password = data gone!
</PeachText>
`;

exports[`DeleteAccountPopup renders popup correctly 1`] = `
<PeachText>
  Without your backup AND your password, you will not be able to regain access to your account!
</PeachText>
`;

exports[`DeleteAccountPopup renders success correctly 1`] = `
<PeachText>
  We hope to see you back soon!
</PeachText>
`;
